@@ -399,6 +399,10 @@ struct aim_userinfo_s {
 #define AIM_FLAG_AWAY		0x0020
 #define AIM_FLAG_UNKNOWN40	0x0040
 #define AIM_FLAG_UNKNOWN80	0x0080
+#define AIM_FLAG_UNKNOWN100	0x0100
+#define AIM_FLAG_UNKNOWN200	0x0200
+#define AIM_FLAG_ACTIVEBUDDY    0x0400
+#define AIM_FLAG_UNKNOWN800	0x0800
 
 #define AIM_FLAG_ALLUSERS	0x001f
 
